Data:Transferred html & CSS from my codepen

--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <title>Flexbox challenge</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./css/flexbox.css" rel="stylesheet">
+
+<body>
+  <header>
+    <div class="logo">
+      The Odin Project</div>
+    <nav>
+      <ul class="navlist">
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="hero">
+    <div>
+      <p class="maintexthero">This website is awesome!</p>
+      <pre>
+      <p class="subtexthero">Ready to learn web development?
+Sign up and start your career today!</p>
+</pre>
+      <div class="hero-button"> <button type="submit">Sign up</button></div>
+    </div> <!-- hero-left div -->
+
+    <div><img src="https://img.freepik.com/free-vector/arcade-game-world-pixel-scene_24640-45908.jpg?w=900&t=st=1661143905~exp=1661144505~hmac=20b4183794ee451046ee07dc46aaae6933b0b2294d00cf572cf26b7f3bf9bbef" width="400" height=auto alt="an image">
+    </div> <!-- .hero-img div -->
+  </div> <!-- .hero div -->
+
+  <div class="card2">
+    <h1> Look, I added some images with text!</h1>
+    <div class="card2-images">
+      <figure>
+        <img src="https://img.freepik.com/free-vector/pixel-art-vacation-background_52683-86708.jpg?w=826&t=st=1661140993~exp=1661141593~hmac=092dde6140843c0c54bf8837771782eea5614233fb21fd736d3eb3d92d72d257" width="180" height="140" style="max-width:100%;height:140;" alt="pixel camping scene">
+        <figcaption>Camping overnight!</figcaption>
+      </figure>
+      <figure>
+        <img src="https://img.freepik.com/free-vector/pixel-art-mystical-background_52683-87349.jpg?w=996&t=st=1661197504~exp=1661198104~hmac=7e5dfa819be2a06ddc77604faeacf9ac143468312372ba0d86566aa4dd404999" width="180" height="140" style="max-width:100%;height:140;" alt="night-time landscape">
+        <figcaption>A night outside!</figcaption>
+      </figure>
+      <figure>
+        <img src="https://media.istockphoto.com/vectors/pixel-art-seamless-background-with-mountains-vector-id910097264?k=6&m=910097264&s=170667a&w=0&h=8aXiFdC41Vc9AxTCmsTQ3Dn-8Wzg-CPYCg2K9MzwW4A=" width="180" height="140" style="max-width:100%;height:140;" alt="mountain landscape">
+        <figcaption>A mountain landscape!</figcaption>
+      </figure>
+      <figure>
+        <img src="https://wallpapercave.com/wp/wp6592768.png" width="180" height="140" style="max-width:100%;height:140;" alt="Jungle Waterfall">
+        <figcaption>Jungle Waterfall!</figcaption>
+      </figure>
+    </div>
+  </div>
+
+  <figure class="quote-card">
+
+    <blockquote>"Some sort of quote from a famous writer that I like."</blockquote>
+    <figcaption class="author">&mdash;Me, probably</figcaption>
+
+  </figure>
+
+  <div class="card3">
+    <div class="card3-signup">
+      <div>
+        <h2>Remember, we're pretty awesome at helping you be your best you!</h2>
+        <p>How much more do we need to tell you? </p>
+      </div>
+
+      <button type="submit">Sign up</button>
+
+    </div>
+  </div>
+
+  <footer>
+    <p>Copyright &#169; The Odin Project 2022</p>
+  </footer>
+
+</body>
+
+</html>
